/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message MediaInfoChannelMetadataData {
  required string track_name = 1;
  optional string artist_name = 2;
  optional string album_name = 3;
  optional bytes album_art = 4;
  required int32 track_length = 6;
  required int32 unknown1 = 7;
}
