/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message MediaInfoChannelMessage {
  enum Enum {
    NONE = 0x0000;
    PLAYBACK = 0x8001;
    METADATA = 0x8003;
  }
}
